--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,6 +5,15 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>yiqin</display-name>
 
+	<context-param>
+		<param-name>org.apache.tiles.impl.BasicTilesContainer.DEFINITIONS_CONFIG</param-name>
+	<param-value>/WEB-INF/tiles.xml</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>org.apache.struts2.tiles.StrutsTilesListener</listener-class>
+	</listener>
+
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
@@ -16,6 +25,6 @@
 	</filter-mapping>
 
 	<welcome-file-list>
-		<welcome-file>/jsp/login.jsp</welcome-file>
+		<welcome-file>/jsp/index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
