--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -42,3 +42,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /output/
+/bin/
+
+/.classpath
+/.project
+/.settings
