--- a/src/app.properties
+++ b/src/app.properties
@@ -1,4 +1,11 @@
-yiqin.phone=+2 95 01 88 821
-yiqin.mail=info@domain.com
+# shop title
 shop.index.title=Welcome to YiQin Shop
 shop.login.title=Login YiQin Shop
+
+# shop header
+yiqin.phone=138 1115 9799
+yiqin.mail=15989111@qq.com
+shop.header.top.accout=Account
+shop.header.top.wishlist=Wishlist
+shop.header.top.cart=Cart
+shop.header.top.login=Login | Signup
