--- a/src/app.properties
+++ b/src/app.properties
@@ -9,3 +9,12 @@ shop.header.top.accout=Account
 shop.header.top.wishlist=Wishlist
 shop.header.top.cart=Cart
 shop.header.top.login=Login | Signup
+shop.header.nav.home=Home
+shop.header.nav.product=Product
+shop.header.nav.products=consumables,paper,machines,stationery
+shop.header.nav.product.consumables=Consumables
+shop.header.nav.product.paper=Office Paper
+shop.header.nav.product.machines=Office Machines
+shop.header.nav.product.stationery=Office Stationery
+shop.header.nav.sales.promotion=Sales Promotion
+shop.header.nav.new.goods=New Goods
