--- a/src/shop_config.properties
+++ b/src/shop_config.properties
@@ -1,2 +1,2 @@
-#shop.header.nav.products=consumables,paper,machines,stationery
-shop.header.nav.products=consumables
+shop.header.nav.products=consumables,paper,machines,stationery
+#shop.header.nav.products=consumables
