--- a/src/app.properties
+++ b/src/app.properties
@@ -17,3 +17,19 @@ shop.header.nav.product.machines=Office Machines
 shop.header.nav.product.stationery=Office Stationery
 shop.header.nav.sales.promotion=Sales Promotion
 shop.header.nav.new.goods=New Goods
+
+# shop footer
+shop.footer.widget.about.yiqin=About YiQin
+shop.footer.widget.about.yiqin.info=\u6613\u52E4\u5546\u57CE\u662F\u5168\u7403\u6700\u5927\u7684\u529E\u516C\u7528\u54C1\u96F6\u552E\u548C\u5206\u9500\u5546\u4E4B\u4E00\u3002\u6211\u4EEC\u81F4\u529B\u4E8E\u4F7F\u5168\u7403\u5BA2\u6237\u90FD\u80FD\u66F4\u7B80\u5355\u5730\u91C7\u8D2D\u5230\u54C1\u7C7B\u9F50\u5168\u7684\u529E\u516C\u7528\u54C1\u3001\u529E\u516C\u8BBE\u5907\u3001\u529E\u516C\u5BB6\u5177\u548C\u5404\u7C7B\u5546\u52A1\u670D\u52A1\u3002
+shop.footer.widget.service=Service
+shop.footer.widget.service.online.help=Online Help
+shop.footer.widget.service.contact.us=Contact Us
+shop.footer.widget.service.order.status=Order Status
+shop.footer.widget.service.faq=FAQ\u2019s
+shop.footer.widget.policies=Policies
+shop.footer.widget.policies.terms.of.use=Terms of Use
+shop.footer.widget.policies.refund.policy=Refund Policy
+shop.footer.widget.policies.billing.system=Billing System
+shop.footer.widget.subscription=Subscription
+shop.footer.widget.subscription.info=Get the most recent updates from <br />our site and be updated your self...
+shop.footer.bottom.copyright=Copyright © 2014 E-SHOPPER Inc. All rights reserved.
