modify shop body

--- a/src/app.properties
+++ b/src/app.properties
@@ -18,6 +18,36 @@ shop.header.nav.product.stationery=Office Stationery
 shop.header.nav.sales.promotion=Sales Promotion
 shop.header.nav.new.goods=New Goods
 
+# shop index body
+shop.index.left.category=Category
+shop.index.left.product.consumables=Consumables
+shop.index.left.product.consumables.printer=Printer
+shop.index.left.product.consumables.copier=Copier
+shop.index.left.product.consumables.fax=Fax machine
+shop.index.left.product.paper=Office Paper
+shop.index.left.product.paper.copy=\u590D\u5370\u7EB8
+shop.index.left.product.paper.print=\u6253\u5370\u7EB8
+shop.index.left.product.paper.art=\u827A\u672F\u7EB8
+shop.index.left.product.paper.other=\u591A\u7528\u9014\u7EB8
+shop.index.left.product.machines=Office Machines
+shop.index.left.product.stationery=Office Stationery
+shop.index.left.brands=Brands
+shop.index.left.brand.staples=Staples
+shop.index.left.brand.brother=Brother
+shop.index.left.brand.canon=Canon
+shop.index.left.brand.lipton=\u7ACB\u987F
+
+shop.index.right.features.items=Features Items
+shop.index.right.product.consumables=Consumables
+shop.index.right.product.paper=Office Paper
+shop.index.right.product.machines=Office Machines
+shop.index.right.product.stationery=Office Stationery
+shop.index.right.recommended.items=recommended items
+
+shop.add.to.cart=Add to cart
+shop.add.to.wishlist=Add to wishlist
+shop.add.to.compare=Add to compare
+
 # shop footer
 shop.footer.widget.about.yiqin=About YiQin
 shop.footer.widget.about.yiqin.info=\u6613\u52E4\u5546\u57CE\u662F\u5168\u7403\u6700\u5927\u7684\u529E\u516C\u7528\u54C1\u96F6\u552E\u548C\u5206\u9500\u5546\u4E4B\u4E00\u3002\u6211\u4EEC\u81F4\u529B\u4E8E\u4F7F\u5168\u7403\u5BA2\u6237\u90FD\u80FD\u66F4\u7B80\u5355\u5730\u91C7\u8D2D\u5230\u54C1\u7C7B\u9F50\u5168\u7684\u529E\u516C\u7528\u54C1\u3001\u529E\u516C\u8BBE\u5907\u3001\u529E\u516C\u5BB6\u5177\u548C\u5404\u7C7B\u5546\u52A1\u670D\u52A1\u3002
