--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<listener>
+		<listener-class>com.yiqin.shop.mongo.InitMongoDBConnection</listener-class>
+	</listener>
 
 	<listener>
 		<listener-class>org.apache.struts2.tiles.StrutsTilesListener</listener-class>
