--- a/src/app.properties
+++ b/src/app.properties
@@ -9,6 +9,7 @@ shop.header.top.accout=Account
 shop.header.top.wishlist=Wishlist
 shop.header.top.cart=Cart
 shop.header.top.login=Login | Signup
+shop.header.top.logout=Exit
 shop.header.nav.home=Home
 shop.header.nav.product=Product
 shop.header.nav.product.consumables=Consumables
