add mysql and  dao

--- a/web/WEB-INF/database.properties
+++ b/web/WEB-INF/database.properties
@@ -1,7 +1,9 @@
-# mongodb config
-mongodb_user=liujun
-mongodb_password=admin
-mongodb_host=127.0.0.1
-mongodb_port=27017
-mongodb_database=admin
-mongodb_dblog=true
+# Properties file with JDBC-related settings.
+# Applied by PropertyPlaceholderConfigurer from "applicationContext.xml".
+# Targeted at system administrators, to avoid touching the context XML files.
+
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc\:mysql\://localhost\:3306/yiqin
+jdbc.username=root
+jdbc.password=
+
