--- a/web/WEB-INF/database.properties
+++ b/web/WEB-INF/database.properties
@@ -5,5 +5,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc\:mysql\://localhost\:3306/yiqin
 jdbc.username=root
-jdbc.password=
+jdbc.password=123
 
