--- a/web/WEB-INF/database.properties
+++ b/web/WEB-INF/database.properties
@@ -7,5 +7,10 @@ jdbc.url=jdbc\:mysql\://localhost\:3306/yiqin
 jdbc.username=root
 jdbc.password=yiqin
 
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc\:mysql\://120.131.80.65\:3306/yiqin
+#jdbc.username=yiqin
+#jdbc.password=yq123456
+
 showSql=true
 dialect=org.hibernate.dialect.MySQLDialect
