add check order

--- a/web/WEB-INF/database.properties
+++ b/web/WEB-INF/database.properties
@@ -10,7 +10,7 @@ jdbc.password=yiqin
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc\:mysql\://120.131.80.65\:3306/yiqin
 #jdbc.username=yiqin
-#jdbc.password=yq123456
+#jdbc.password=mysql123
 
 showSql=true
 dialect=org.hibernate.dialect.MySQLDialect
