--- a/web/WEB-INF/database.properties
+++ b/web/WEB-INF/database.properties
@@ -2,15 +2,15 @@
 # Applied by PropertyPlaceholderConfigurer from "applicationContext.xml".
 # Targeted at system administrators, to avoid touching the context XML files.
 
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc\:mysql\://localhost\:3306/yiqin
+#jdbc.username=root
+#jdbc.password=yiqin
+
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc\:mysql\://120.131.80.65\:3306/yiqin
+jdbc.url=jdbc\:mysql\://localhost\:3306/yiqin
 jdbc.username=yiqin
 jdbc.password=mysql123
-
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc\:mysql\://120.131.80.65\:3306/yiqin
-#jdbc.username=yiqin
-#jdbc.password=mysql123
 
 showSql=true
 dialect=org.hibernate.dialect.MySQLDialect
