--- a/web/WEB-INF/database.properties
+++ b/web/WEB-INF/database.properties
@@ -12,5 +12,5 @@ jdbc.url=jdbc\:mysql\://localhost\:3306/yiqin
 jdbc.username=yiqin
 jdbc.password=mysql123
 
-showSql=truep
+showSql=true
 dialect=org.hibernate.dialect.MySQLDialect
