--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -56,6 +56,6 @@
 	</filter-mapping>
 
 	<welcome-file-list>
-		<welcome-file>/index.action</welcome-file>
+		<welcome-file>/index</welcome-file>
 	</welcome-file-list>
 </web-app>
