--- a/web/WEB-INF/log4j.properties
+++ b/web/WEB-INF/log4j.properties
@@ -22,5 +22,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d %5p (%c:%L) - %m%n
 # Print only messages of level ERROR or above in the package noModule.
 log4j.logger.noModule=FATAL
 
-log4j.logger.com.opensymphony.xwork2=DEBUG
-log4j.logger.org.apache.struts2=DEBUG
+#log4j.logger.com.opensymphony.xwork2=DEBUG
+#log4j.logger.org.apache.struts2=DEBUG
+log4j.logger.com.opensymphony.xwork2=INFO
+log4j.logger.org.apache.struts2=INFO
