--- a/src/config_shop.properties
+++ b/src/config_shop.properties
@@ -1,2 +1,14 @@
 shop.header.nav.products=consumables,paper,machines,stationery
 #shop.header.nav.products=consumables
+
+mail.smtpServerHost=smtp.exmail.qq.com
+mail.mailsizelimit=8388608
+from.email=taosijun@electte.com
+from.email.password=qwe123
+send.name.email=\u4F9D\u52E4\u5546\u57CE
+
+modify.passowrd.title=\u4F9D\u52E4\u5546\u57CE\u5BC6\u7801\u4FEE\u6539\u8BA4\u8BC1
+modify.email.title=\u4F9D\u52E4\u5546\u57CE\u90AE\u7BB1\u4FEE\u6539\u8BA4\u8BC1
+verification.email.title=\u4F9D\u52E4\u5546\u57CE\u90AE\u7BB1\u9A8C\u8BC1
+
+verify.code.expired.time.minute=3
