fix update product

--- a/src/com/yiqin/sa/action/EditProductAction-conversion.properties
+++ b/src/com/yiqin/sa/action/EditProductAction-conversion.properties
@@ -1,2 +1,2 @@
- Element_pList=com.yiqin.pojo.Product
- CreateIfNull_pList=true
+Element_products=com.yiqin.pojo.Product
+CreateIfNull_products=true
