add quick shopping

--- a/src/config_shop.properties
+++ b/src/config_shop.properties
@@ -10,5 +10,9 @@ send.name.email=\u4F9D\u52E4\u5546\u57CE
 modify.passowrd.title=\u4F9D\u52E4\u5546\u57CE\u5BC6\u7801\u4FEE\u6539\u8BA4\u8BC1
 modify.email.title=\u4F9D\u52E4\u5546\u57CE\u90AE\u7BB1\u4FEE\u6539\u8BA4\u8BC1
 verification.email.title=\u4F9D\u52E4\u5546\u57CE\u90AE\u7BB1\u9A8C\u8BC1
-
 verify.code.expired.time.minute=3
+
+shop.order.list.max.page.size=5
+shop.filter.product.list.max.page.size=12
+shop.best.product.list.max.page.size=12
+
