modiyf register brand

--- a/src/config_shop.properties
+++ b/src/config_shop.properties
@@ -1,6 +1,8 @@
 shop.header.nav.products=consumables,paper,machines,stationery
 #shop.header.nav.products=consumables
 
+shop.user.regist.show.userid=daiweitao
+
 mail.smtpServerHost=smtp.exmail.qq.com
 mail.mailsizelimit=8388608
 from.email=taosijun@electte.com
