--- a/src/config_shop.properties
+++ b/src/config_shop.properties
@@ -9,6 +9,7 @@ from.email=taosijun@electte.com
 from.email.password=qwe123
 send.name.email=\u4F9D\u52E4\u5546\u57CE
 
+new.add.order.title=\u65B0\u589E\u8BA2\u5355\u4FE1\u606F
 modify.passowrd.title=\u4F9D\u52E4\u5546\u57CE\u5BC6\u7801\u4FEE\u6539\u8BA4\u8BC1
 modify.email.title=\u4F9D\u52E4\u5546\u57CE\u90AE\u7BB1\u4FEE\u6539\u8BA4\u8BC1
 verification.email.title=\u4F9D\u52E4\u5546\u57CE\u90AE\u7BB1\u9A8C\u8BC1
