--- a/src/config_shop.properties
+++ b/src/config_shop.properties
@@ -4,6 +4,8 @@ shop.header.nav.products=consumables,paper,machines,stationery
 export.excel.header.key.name=id\:\u8BA2\u5355ID,userId\:\u5BA2\u6237ID,name\:\u5BA2\u6237\u540D\u79F0,mobile\:\u8054\u7CFB\u7535\u8BDD,yuanjia\:\u8BA2\u5355\u539F\u4EF7,zhekou\:\u8BA2\u5355\u6298\u6263,zongjia\:\u5B9E\u4ED8\u603B\u989D,crateDate\:\u4E0B\u5355\u65F6\u95F4,status\:\u8BA2\u5355\u72B6\u6001,productId\:\u5546\u54C1ID,productName\:\u5546\u54C1\u540D\u79F0,price\:\u5546\u54C1\u539F\u4EF7,zhekouPrice\:\u5546\u54C1\u6298\u540E\u4EF7,count\:\u5546\u54C1\u6570\u91CF,productInfo\:\u5546\u54C1\u989C\u8272
 export.order.column.default=id,userId,name,mobile,yuanjia,zhekou,zongjia,crateDate,status,productId,productName,price,zhekouPrice,count,productInfo
 
+shop.index.page.show.product.ids=11110001,11110002,11120001,11120002,11120003,11120004,11120005,11120006
+
 shop.user.regist.show.userid=daiweitao
 
 mail.smtpServerHost=smtp.exmail.qq.com
