--- a/src/config_shop.properties
+++ b/src/config_shop.properties
@@ -10,9 +10,10 @@ shop.user.regist.show.userid=daiweitao
 
 mail.smtpServerHost=smtp.exmail.qq.com
 mail.mailsizelimit=8388608
-from.email=taosijun@electte.com
-from.email.password=qwe123
-send.name.email=\u4F9D\u52E4\u5546\u57CE
+from.email=system@electte.com
+from.email.password=sys123456
+to.email=deliver@electte.com
+send.name.email=\u4F9D\u52E4\u529E\u516C
 
 new.add.order.title=\u65B0\u589E\u8BA2\u5355\u4FE1\u606F
 modify.passowrd.title=\u4F9D\u52E4\u5546\u57CE\u5BC6\u7801\u4FEE\u6539\u8BA4\u8BC1
