--- a/web/WEB-INF/database.properties
+++ b/web/WEB-INF/database.properties
@@ -10,7 +10,7 @@
 
 #master
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc\:mysql\://localhost\:3306/yiqin
+jdbc.url=jdbc\:mysql\://120.131.80.65\:3306/yiqin
 jdbc.username=yiqin
 jdbc.password=mysql123
 
