1, add attribute-param for change color 2, dont show attribute-cost

--- a/src/config_shop.properties
+++ b/src/config_shop.properties
@@ -25,3 +25,4 @@ shop.order.list.max.page.size=5
 shop.filter.product.list.max.page.size=12
 shop.best.product.list.max.page.size=12
 
+product.detail.item.no.show=cost
